--- a/NotePad/NotePad/finddialog.ui
+++ b/NotePad/NotePad/finddialog.ui
@@ -74,7 +74,7 @@
     <string>Cancel</string>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkBox">
+  <widget class="QCheckBox" name="matchCase">
    <property name="geometry">
     <rect>
      <x>10</x>
